# DESC_BPZ

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  testing-and-coverage.yml
desc_bpz/: MLab_coe_py3.py  bpz_tools_py3.py  coeio_py3.py  coetools_py3.py  prior_from_dict.py  useful_py3.py  version.py
scripts/: bpz.py
src/desc_bpz/: MLab_coe_py3.py  bpz_tools_py3.py  coeio_py3.py  paths.py  prior_hdfn_gen.py  spline_py3.py  useful_py3.py  version.py  will_tools_py3.py
src/desc_bpz/scripts/: bpz.py
tests/: CSDC2114_test.columns  test1000.bpz.h5  test1000.h5  test1000.pars  test1000_probs.h5  test_new_prior.py  test_paths.py  trainset.columns
